# API-test

./: .editorconfig  docker-compose.yml  main.py  pyproject.toml
src/: config_local.py  connections.py  responses.py  services.py
